deploy/staging/env.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: access-request-api
  labels:
    app: access-request-api
spec:
  template:    
    spec:
      containers:
        - name: access-request-api
