deploy/staging/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: access-request-api
  annotations:
    nginx.ingress.kubernetes.io/proxy-buffering: 'on'
    nginx.ingress.kubernetes.io/proxy-buffers-number: '8'
    nginx.ingress.kubernetes.io/proxy-buffer-size: '32k'
    nginx.ingress.kubernetes.io/server-snippet: |
      server_tokens off;
      location ~ ^/(ping|ready|prometheus) {
        deny all;
        return 404;
      }
spec:
  ingressClassName: nginx
  rules:
    - host: access-request.api.staging.fellesdatakatalog.digdir.no
      http:
        paths:
          - backend:
              service:
                name: access-request-api
                port:
                  number: 8080
            path: /
            pathType: Prefix
